--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,10 @@
----
 name: Checks
 
 on: [push]
 
 jobs:
-  test-lint:
-    name: Test and Lint
+  test:
+    name: Test
     runs-on: ubuntu-20.04
     steps:
       - name: Login to Docker Hub
@@ -15,7 +14,36 @@ jobs:
           password: ${{secrets.DOCKERHUB_TOKEN}}
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/requirements.txt') }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x' # Specify your Python version
+      - name: Install dependencies
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+        run: |
+          python -m venv .venv
+          source .venv/bin/activate
+          pip install -r requirements.txt
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py test"
+        run: |
+          source .venv/bin/activate
+          docker-compose run --rm app sh -c "python manage.py test"
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
