--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,7 @@ jobs:
         run: |
           source .venv/bin/activate
           docker-compose run --rm app sh -c "python manage.py test"
-
-  lint:
+lint:
     name: Lint
     runs-on: ubuntu-20.04
     steps:
@@ -47,5 +46,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Install Docker Compose
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+          cache: 'pip'
+        run: |
+          pip install docker-compose
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
