--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,10 @@ jobs:
         with:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_TOKEN}}
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Lint
-      run: |
-        docker run --rm -v $(pwd):/app -w /app docker/compose:1.29.2 sh -c "flake8"
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Docker Build
+        uses: docker/setup-buildx-action@v2
+      - name: Lint
+        run: |
+          docker run --rm -v $(pwd):/app -w /app docker/compose:1.29.2 sh -c "flake8"
