--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Checks
 
-on: [ push ]
+on: [push]
 
 jobs:
   test:
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x' # Specify your Python version
+          python-version: '3.x' 
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: |
@@ -33,6 +33,7 @@ jobs:
         run: |
           source .venv/bin/activate
           docker-compose run --rm app sh -c "python manage.py test"
+
   lint:
     name: Lint
     runs-on: ubuntu-20.04
@@ -44,7 +45,7 @@ jobs:
           password: ${{secrets.DOCKERHUB_TOKEN}}
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up Docker Build
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Lint
         run: |
